[gd_scene load_steps=3 format=3 uid="uid://dlnkeonp1vyqr"]

[ext_resource type="Script" uid="uid://36blf2tl8vwd" path="res://Graphic Elements/Buttons/passive_super_button_old.gd" id="1_f7rhv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rflq"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="SuperButton" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7rflq")
script = ExtResource("1_f7rhv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
